# ChangeLog for app-portage/g-ctan
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/g-ctan/ChangeLog,v 1.16 2010/11/15 12:36:06 fauli Exp $

*g-ctan-2010.1 (15 Nov 2010)

  15 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2010.1.ebuild:
  version bump to work with TeXLive 2010

*g-ctan-2009.2-r1 (25 Oct 2010)

  25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2009.2-r1.ebuild:
  TeXLive upstream changed repository URL because of Release of TeXLive
  2010, fix it by providing the archive location

  25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2009.1.ebuild:
  clean up

*g-ctan-2009.2 (23 Jun 2010)

  23 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2009.2.ebuild:
  version bump, fixes bug 315171

*g-ctan-2009.1 (21 Jan 2010)

  21 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2009.1.ebuild:
  version bump for TeXLive 2009

  14 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  -files/g-ctan-2008.1-fix-overlay-detection.patch:
  clean up stray patch

*g-ctan-2008.2 (11 Jan 2010)

  11 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2008.1-r1.ebuild, +g-ctan-2008.2.ebuild:
  version bump because of upstream changes

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  g-ctan-2008.1-r1.ebuild:
  added ~amd64 for bug 286060

*g-ctan-2008.1-r1 (23 Sep 2009)

  23 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2008.1.ebuild, +g-ctan-2008.1-r1.ebuild,
  +files/g-ctan-2008.1-fix-overlay-detection.patch:
  revision bump to fix Launchpad bug 434385

  21 Sep 2009; Christian Faulhammer <fauli@gentoo.org> -g-ctan-9999.ebuild:
  clean up

*g-ctan-2008.1 (21 Sep 2009)

  21 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2008.1.ebuild:
  first released version

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> g-ctan-9999.ebuild:
  depend on TeXLive 2008
